--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,10 @@
-name: Deploy Single File
+name: Deploy Files
 
 on:
   push:
     branches:
-      - main  
+      - main  # Trigger deployment when code is pushed to the main branch
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
@@ -15,10 +16,16 @@ jobs:
     - name: Set up SSH
       run: |
         mkdir -p ~/.ssh
-        echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/deploy_key.pem
-        chmod 600 ~/.ssh/deploy_key.pem
+        echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/deploy_key_new.pem
+        chmod 600 ~/.ssh/deploy_key_new.pem
         ssh-keyscan -H ${{ secrets.SERVER_HOST }} >> ~/.ssh/known_hosts
 
-    - name: Deploy file to server
+    - name: Deploy files to server
       run: |
-        scp -i ~/.ssh/deploy_key.pem path/to/your/file.txt ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }}:/path/on/server/
+        # Define the files or directories you want to deploy
+        FILES_TO_DEPLOY="README.md"
+        
+        # Deploy each file or directory
+        for file in $FILES_TO_DEPLOY; do
+          scp -i ~/.ssh/deploy_key_new.pem -r $file ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }}:/home/ubuntu/
+        done
