--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,17 +16,17 @@ jobs:
     - name: Set up SSH
       run: |
         mkdir -p ~/.ssh
-        echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/deploy_KEy.pem
-        chmod 400 ~/.ssh/deploy_KEy.pem
+        echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/deploy_key.pem
+        chmod 400 ~/.ssh/deploy_key.pem
         ssh-keyscan -H ${{ secrets.SERVER_HOST }} >> ~/.ssh/known_hosts
 
     - name: Verify SSH Configuration
       run: |
-        ssh -i ~/.ssh/deploy_KEy.pem -o StrictHostKeyChecking=no ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }} "echo SSH connection successful"
+        ssh -i ~/.ssh/deploy_Key.pem -o StrictHostKeyChecking=no ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }} "echo SSH connection successful"
 
     - name: Deploy files to server
       run: |
         FILES_TO_DEPLOY="README.md"
         for file in $FILES_TO_DEPLOY; do
-          scp -i ~/.ssh/deploy_key_new.pem -r $file ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }}:/home/ubuntu/
+          scp -i ~/.ssh/deploy_key.pem -r $file ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }}: /home/ubuntu/
         done
