--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,22 +11,14 @@ jobs:
 
     steps:
     - name: Checkout code
-      uses: actions/checkout@v3
-
-    - name: Set up SSH
-      run: |
-        mkdir -p ~/.ssh
-        echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/deploy_key.pem
-        chmod 400 ~/.ssh/deploy_key.pem
-        ssh-keyscan -H ${{ secrets.SERVER_HOST }} >> ~/.ssh/known_hosts
-
-    - name: Verify SSH Configuration
-      run: |
-        ssh -i ~/.ssh/deploy_Key.pem -o StrictHostKeyChecking=no ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }} "echo SSH connection successful"
-
-    - name: Deploy files to server
-      run: |
-        FILES_TO_DEPLOY="README.md"
-        for file in $FILES_TO_DEPLOY; do
-          scp -i ~/.ssh/deploy_key.pem -r $file ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }}:/home/ubuntu/
-        done
+      uses: actions/checkout@v3-
+    - name: executing remote ssh commands using ssh key
+      uses: appleboy/ssh-action@v1.0.3
+       with:
+         host: ${{ secrets.SERVER_HOST }}
+         username: ${{ secrets.SERVER_USER }}
+         key: ${{ secrets.SSH_PRIVATE_KEY }}
+         port: ${{ secrets.PORT }}
+         script: whoami
+     
+   
