--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,18 +1,12 @@
-name: Deploy Files
-
-on:
-  push:
-    branches:
-      - main  # Trigger deployment when code is pushed to the main branch
-
+name: remote ssh command
+on: [push]
 jobs:
-  deploy:
-    runs-on: ubuntu-latest
 
+  build:
+    name: Build
+    runs-on: ubuntu-latest
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v3-
-    - name: executing remote ssh commands using ssh key
+    - name: executing remote ssh commands using password
       uses: appleboy/ssh-action@v1.0.3
       with:
         host: ${{ secrets.SERVER_HOST }}
